[package]
name = "teamboard-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
surrealdb = { version = "2.1.4", features = ["protocol-http"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
